# GBS_BidScope

./: .coverage  .env.example  .gitignore  README.md  busj.py  check_db.py  config.py  crawl.py  crawl_update_content.py  crawl_update_content2.py  data_analytics.py  database.py  extractors.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_config.py  test_data_analytics.py  test_utils.py  test_zhipuai_env.py  utils.py  web_viewer.py  zhipu.py  zhipu_service.py
src/: config.py
src/analytics/: data_analyzer.py
src/crawler/: browser_utils.py  content_extractor.py  excel_parser.py
src/database/: connection.py  schema.py
src/utils/: text_utils.py  time_utils.py  url_utils.py
src/web/: app.py
templates/: viewer_admin_clear.html  viewer_analytics.html  viewer_base.html  viewer_detail.html  viewer_error.html  viewer_export.html  viewer_index.html  viewer_report.html
tests/: conftest.py  test_config.py  test_content_extractor.py  test_data_analytics.py  test_database.py  test_excel_parser.py  test_extractors.py  test_text_utils.py  test_time_utils.py  test_url_utils.py  test_utils.py
